Fixed the color of the User Name in the user applet, so it is readable.

--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -1048,6 +1048,14 @@ padding: 2px;
 padding: 0px 2px 4px 2px;
 }
 /* ===================================================================
+* User Applet (Session Management)
+* ===================================================================*/
+.user-label {
+  color: #333;
+  font-size: 16px;
+  margin: 6px;
+}
+/* ===================================================================
 * Applets (applet.js)
 * ===================================================================*/
 .applet-box {
